# struct_macro_eq

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs
