[lib]
proc-macro = true

[package]
name = "struct_macro_eq"
version = "0.1.0"
edition = "2021"
authors = ["Charles Lim <milselarch@gmail.com>"]
description = "implements Eq for structs, but with the ability to exclude fields from equality checking using an ignore_regex attribute"
license = "MIT"
documentation = "https://github.com/milselarch/struct_macro_eq/"
homepage = "https://github.com/milselarch/struct_macro_eq/"
keywords = ["equality", "struct", "macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.23"
syn = "1.0.107"
regex = "1.6"
